<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/admin_view"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/admin_view"/>

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/visiting_team"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="@color/black"/>



            <Spinner
                android:id="@+id/visiting_team_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/team_players"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="@color/black"/>
            <Spinner
                android:id="@+id/v_player_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/bench_players"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="@color/black"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/v_player_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <Button
                android:id="@+id/back_button"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:background="@drawable/roundstyle"
                android:text="@string/back_button"
                android:layout_marginTop="3dp"
                app:backgroundTint="#3F51B5"
                android:layout_gravity="center_vertical|center_horizontal"/>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>